# qpitch

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _clang-format
cmake_modules/: FindFFTW3.cmake  FindPortaudio.cmake  PLACEHOLDER
src/: CMakeLists.txt  cyclicbuffer.cpp  cyclicbuffer.h  fpsprofiler.cpp  fpsprofiler.h  freqdiffview.cpp  freqdiffview.h  main.cpp  notes.cpp  notes.h  pitchdetection.cpp  pitchdetection.h  plotview.cpp  plotview.h  qaboutdlg.cpp  qaboutdlg.h  qlogview.cpp  qlogview.h  qosziview.cpp  qosziview.h  qpitch.cpp  qpitch.h  qpitch.pro  qpitchannotations.h  qpitchcore.cpp  qpitchcore.h  qpitchsettings.cpp  qpitchsettings.h  qsettingsdlg.cpp  qsettingsdlg.h  texthelper.cpp  texthelper.h  tst_cyclicbuffertest.cpp  tst_cyclicbuffertest.h  visualization_data.cpp  visualization_data.h
src/ui/: qpitch.rc  qpitch.ui
tools/: format.bash
